k8s/manifests/gateway-api/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: envoy-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy-gateway-class
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway
  listeners:
    - name: http
      hostname: localhost
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              envoy-gateway-access: "true"
    - name: prometheus
      hostname: localhost
      protocol: HTTP
      port: 9090
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              envoy-gateway-access: "true"
    - name: grafana
      hostname: localhost
      protocol: HTTP
      port: 9091
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              envoy-gateway-access: "true"
